--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1.0"
         />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="My website" />
+        <meta name="description" content="Xeyn's website" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
         <!--
     manifest.json provides metadata used when your web app is installed on a
