--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+        <link rel="me" href="https://twitter.com/XeynQ4" />
+        <link rel="me" href="https://github.com/XeynQ4" />
+        <link rel="me" href="https://bsky.app/profile/xeyn.me" />
+        <link rel="me" href="https://mastodon.social/@xeyn" />
+
         <title>Xeyn's website</title>
     </head>
     <body>
