Added pgpkey to the header

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <link rel="me" href="https://bsky.app/profile/xeyn.me" />
         <link rel="me" href="https://mastodon.social/@xeyn" />
         <link rel="me" href="mailto:xeyn@xeyn.me" />
+        <link rel="pgpkey" href="../src/files/Xeyn.key" />
 
         <title>Xeyn's website</title>
     </head>
