Added pronouns.page link to headed

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <link rel="me" href="https://mastodon.social/@xeyn" />
         <link rel="me" href="mailto:xeyn@xeyn.me" />
         <link rel="pgpkey" href="./Xeyn.key" />
+        <link rel="me" href="https://en.pronouns.page/@Xeyn" />
 
         <title>Xeyn's website</title>
     </head>
